# endpointclaw

./: .env.example  .gitignore  LICENSE  README.md
agent/: pyproject.toml  requirements.txt
agent/chat/: README.md
agent/config/: default_config.json
agent/indexer/: README.md
agent/playbook_engine/: README.md
agent/relay/: README.md
agent/service/: README.md
agent/src/: main.py
agent/src/chat/: claude.py  server.py
agent/src/comms/: relay.py  sync.py
agent/src/core/: config.py  database.py  orchestrator.py  tray.py
agent/src/indexing/: scanner.py  watcher.py
agent/src/monitoring/: activity.py  keystrokes.py  screenshots.py
agent/src/ui/templates/: index.html
dashboard/: Dockerfile  docker-compose.yml  pyproject.toml
dashboard/api/: main.py
dashboard/api/middleware/: auth.py
dashboard/api/routes/: activity.py  analytics.py  commands.py  files.py  fleet.py  keystrokes.py  machine_api.py  monitoring.py  playbooks.py  policies.py  screenshots.py
dashboard/api/services/: supabase_client.py
dashboard/frontend/public/: index.html
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SPEC.md
installer/: build.bat  endpointclaw.iss  install.py  setup-mark.bat
schema/: endpointclaw_schema.sql
tests/unit/: test_config.py  test_database.py  test_scanner.py
