[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endpointclaw-dashboard"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.109.0","uvicorn[standard]>=0.27.0","httpx>=0.26.0","pydantic>=2.0.0","python-dotenv>=1.0.0"]

[tool.setuptools.packages.find]
include = ["api*"]
